# CMake

./: CMakeLists.txt
include/: Complex.h  ComplexTemplete.h  MyMath.h  print.h
script/: build.bat  run.bat
src/: Test.cpp  main.cpp
src/FileHandling/: main.cpp  students.csv
src/lib/: Complex.cpp  print.cpp
